# Aegis-Reborn

./: .gitignore  CONTRIBUTING.md  Cargo.nix  Cargo.toml  README.md  codebase.txt  config.example.toml  config.toml  err.txt  first_true_run_on_new_gauntlet.txt  flake.nix  gauntlet_report_1755748686.json  gauntlet_report_1755813455.json  gauntlet_report_1756046089.json  gauntlet_report_1756056559.json  gauntlet_report_1756057311.json  gauntlet_report_1756058812.json  gauntlet_report_1756060622.json  grammar.bnf  out.txt  out10.txt  quick_test.toml  second_true_run.txt  tags
benches/: evolution_benchmark.rs
data/: EURUSDX.csv  QQQ_Hourly.csv  imputed_EURUSDX.csv
output_examples/0. Before step 4/: out1.txt  out2.txt  out_run_0.txt
output_examples/1. After Step 5/: first_true_run.txt
output_examples/2. Per Gene Probabilistic Run 10%/: per_gene_probalistic_mutation_run.txt
output_examples/3. Per Gene Probabilistic Run 25%/: per_gene_probalistic_mutation_run_25perc_mut.txt  per_gene_probalistic_mutation_run_25perc_mut_2.txt
output_examples/The Full Reports for Every Run (Wasn't able to classify em)/: gauntlet_report_1755749509.json  gauntlet_report_1755750175.json  gauntlet_report_1755807700.json  gauntlet_report_1755829162.json  gauntlet_report_1755840746.json  gauntlet_report_1755935805.json  gauntlet_report_1755973019.json  gauntlet_report_1755978834.json
src/: config.rs  lib.rs  main.rs  strategy.rs
src/data/: BTC-USD.csv  mod.rs
src/evaluation/: backtester.rs  gauntlet.rs  indicators.rs  mod.rs  rolling.rs  walk_forward.rs
src/evolution/: grammar.rs  (+3 more)
(+6 files in other folders)
