[package]
name = "aegis-reborn"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
polars = "0.50.0"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
ta = "0.5.0"
thiserror = "2.0.15"
toml = "0.9.5"

[dev-dependencies]
tempfile = "3.20.0"
